# telegram-bot-chat-manager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  loggers.py  main.py  pyproject.toml  requirements.txt  settings.py
app/: __init__.py
app/data/: button_text.py  inline_query_text.py  message_text.py
app/filters/: __init__.py  chat_type.py  has_permissions.py  translated_inline_query_text.py  translated_message_text.py
app/handlers/: __init__.py
app/handlers/channel/: __init__.py  new_member.py
app/handlers/group/: __init__.py
app/handlers/group/inline_query/: __init__.py
app/handlers/group/message/: __init__.py  recognize_video_note.py  recognize_voice.py
app/handlers/group/service_message/: __init__.py  join_member.py  left_member.py
app/handlers/group/service_messages/: __init__.py
app/handlers/private/callback_query/: __init__.py
app/handlers/private/inline_query/: __init__.py  display_my_repo.py
app/keyboards/: __init__.py
app/keyboards/reply/: start.py
app/middlewares/: __init__.py  flood_control_in_group.py  telegram_chat.py  telegram_chat_member.py  telegram_chat_message.py  telegram_user.py  translate.py
app/models/: __init__.py  telegram_chat.py  telegram_chat_member.py  telegram_chat_member_rating.py  telegram_chat_message.py  telegram_user.py
app/services/: repo.py
app/utils/bot/: malling_message.py  send_keyboards.py
app/utils/helper/: formatting.py  language.py  telegram_chat_member_rating.py
app/utils/misc/: recognize_audio.py
app/utils/parse/: time_delta.py
(+9 files in other folders)
