[tool.poetry]
name = "telegram-bot-chat-manager"
version = "0.1.0"
description = ""
authors = ["veenrokroot <veenrokdalv@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
SpeechRecognition = "^3.8.1"
aioredis = "^2.0.1"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.39"
environs = "^9.5.0"
Babel = "^2.10.3"
aiograph = "^0.2"
moviepy = "^1.0.3"
attrs = "19.1.0"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
